kill killhelper in  client destructor

BUG: 305157
FIXED-IN: 4.9.1
REVIEW: 106022